# beancount-fetch

./: .editorconfig  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
.chglog/: config.yml
.github/workflows/: lint.yaml  test.yaml
beancount_fetch/: __init__.py  beancount_fetch.py
tests/: __init__.py  test_beancount_fetcher.py
